refs/pf32/samples/PhotonForce/C++/PF32_API.h

      /** \brief Set the minimum severity level of log messages to be written to standard output stream.
       *  \param newLogLevel New minimum severity level of log messages to be written to standard output stream. Default setting is off.
       */
      MS_DECL_SPEC void setLogStreamLevel(int newLogLevel);
      
      /** \brief Constructor to create and initialise a PF32 comms object and return a handle to it.
       *  \return Pointer to a new PF32 object.
       */
      MS_DECL_SPEC PF32_HANDLE PF32_construct();
      /** \brief Destructor to close a PF32 comms object. 
       *  It is essential that no further calls are made using this handle once the destructor has be called.
       *  \param pf32 Handle to the PF32 object to be destroyed.
       */
      MS_DECL_SPEC void PF32_destruct(PF32_HANDLE pf32);
      /** \brief Method to query system link status.
       *  \param pf32 Handle to the PF32 object to be queried.
       */
      MS_DECL_SPEC PF32_conn_status getLinkStatus(PF32_HANDLE pf32);
      // Operation
      /** \brief Set PF32 sensor acquisition mode.
       *  \param pf32 Handle to the PF32 object to be updated.
       *  \param mode Mode to set the PF32 camera to.
       */
      MS_DECL_SPEC void setMode(PF32_HANDLE pf32, PF32_mode mode);
      /// @}

      ////////////////////////////////////////////////////////////////////////////////
      /// \name Misc sensor conf methods
      /// @{

      /** \brief Set the enable status of the SPADs.
       *  \param pf32 Handle to the PF32 object to be updated.
       *  \param SPAD_en SPAD enable status (true = active, false = disabled).
       */
      MS_DECL_SPEC void setSPADEnable(PF32_HANDLE pf32, bool SPAD_en);
      /** \brief Set the required data source for streaming.
       *  \param pf32 Handle to the PF32 object to be updated.
       *  \param source \ref PF32_data_source enum specifying the required data type to be streamed.
       */
      MS_DECL_SPEC void setDataSource(PF32_HANDLE pf32, PF32_data_source source);
      /** \brief Set the sensor exposure time for a single frame. The sensor's readout frame rate is the reciprocal of exposure time.
       *  \param pf32 Handle to the PF32 object to be updated.
       *  \param exposure Exposure time, expressed as a double, in microseconds.
       */
      MS_DECL_SPEC void setExposure_us(PF32_HANDLE pf32, double exposure);
      /** \brief Query the current sync input frequency.
       *  \param pf32 Handle to the PF32 object to be updated.
       *  \return Current sync input frequency, expressed as an integer, in Hz.
       */
      MS_DECL_SPEC int  getSync_Hz(PF32_HANDLE pf32);
      /** \brief Query the current sync input duty ratio. THis is useful to check that the signal polarity is as expected. 
       *  \param pf32 Handle to the PF32 object to be updated.
       *  \return Current sync input signal duty ratio, expressed as a double, from 0 to 1.
       */
      MS_DECL_SPEC double getSyncDutyRatio(PF32_HANDLE pf32);